--- a/css/main.css
+++ b/css/main.css
@@ -36,12 +36,21 @@ section > div {
     vertical-align: middle;
 }
 
+h1, h2, h3 {
+    margin-block-end: 0;
+    margin-block-start: 0;
+}
 h1{
     font-size: 8vmin;
     font-weight: 700;
+    margin-top: 40px;
 }
 h2{
     font-size: 4vmin;
+}
+h3{
+    margin-top: 25px;
+    margin-bottom: 0;
 }
 #reset {
     margin-top: 15px;
